--- a/client/package.json
+++ b/client/package.json
@@ -19,11 +19,23 @@
         "typescript": "^4.8.4",
         "web-vitals": "^2.1.4"
     },
+    "devDependencies": {
+        "npm-watch": "^0.11.0"
+    },
+    "watch": {
+        "build": {
+            "patterns": [
+                "src"
+            ],
+            "extensions": "js,tsx,css"
+        }
+    },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "watch": "npm-watch"
     },
     "eslintConfig": {
         "extends": [
