--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "dependencies": {
+        "bcrypt": "^5.1.0",
         "concurrently": "^7.4.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
