--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^6.6.5",
-        "nodemon": "^3.1.4"
+        "nodemon": "^3.1.4",
+        "puppeteer": "^23.1.1",
+        "puppeteer-extra": "^3.3.6",
+        "puppeteer-extra-plugin-stealth": "^2.11.2"
     },
     "scripts": {
         "build": "cd client && npm run build",
