--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
         "web-vitals": "^2.1.4"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "npm-watch": "^0.11.0"
     },
     "watch": {
