--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "scripts": {
         "build": "cd client && npm run build",
         "install-client": "cd client && npm install",
-        "heroku-postbuild": "npm run install-client && npm run build",
+        "heroku-postbuild": "npm run install-client && npm run build && mkdir ./.cache && mv /app/.cache/puppeteer ./.cache",
         "server": "nodemon server.js",
         "develop": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix client\"",
         "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix client\""
